mdapi_output_dir/objects/MasterMember__c.object
<CustomObject>
    <label>メンバーマスタ</label>
    <nameField>
        <label>名前</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>所属部署</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>営業部</fullName>
                </value>
                <value>
                    <fullName>技術部</fullName>
                </value>
                <value>
                    <fullName>総務部</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArrivalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[システム]出勤状況</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttendanceListShow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>出勤状況に表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentState__c</fullName>
        <label>雇用状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>在職</fullName>
                </value>
                <value>
                    <fullName>休職</fullName>
                </value>
                <value>
                    <fullName>退職</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FixedOvertime__c</fullName>
        <label>固定残業時間</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>スケジュール表示用の名前</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegularTimeEnd__c</fullName>
        <label>定時終了</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegularTimeStart__c</fullName>
        <label>定時開始</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>7:30</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>8:30</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>9:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SortNumber__c</fullName>
        <label>並び順</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>関連ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>メンバーマスタ</relationshipLabel>
        <relationshipName>MasterMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkingStatus__c</fullName>
        <label>[システム]作業状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>休憩中</fullName>
                </value>
                <value>
                    <fullName>外出中</fullName>
                </value>
                <value>
                    <fullName>移動中</fullName>
                </value>
                <value>
                    <fullName>作業中</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
</CustomObject>